--- a/mydrive/pom.xml
+++ b/mydrive/pom.xml
@@ -63,6 +63,30 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			
+			 <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.1.1</version>
+            <executions>
+                <execution>
+                    <id>run-bat-file</id>
+                    <phase>process-resources</phase>
+                    <goals>
+                        <goal>exec</goal>
+                    </goals>
+                    <configuration>
+                        <executable>cmd</executable>
+                        <arguments>
+                            <argument>/c</argument>
+                            <argument>version.bat</argument>
+                            <!-- Additional arguments if needed -->
+                        </arguments>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+        
 		</plugins>
 	</build>
 
